--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax.js/1.5.0/parallax.min.js" integrity="sha512-Blu6KWaTqestULmtJUTB2mwDFTB/FDRuTHV52Uu5dTFVQZ8YWUq2LuxN/brNEjWAqlHr50oAbxrydsuxoK/mqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fitvids/1.2.0/jquery.fitvids.js" integrity="sha512-pqkb6/UAT10SHJUVH6ROY6mpCZU295eKSYmKi0Ve/Y5WIF2hcqn6P0bHyscfxnNoPgx/6RzrVv/2x8hyVhL6lg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -41,7 +42,7 @@
 
   <div id="wrapper">
 
-    <section class="parallax-window" data-parallax="scroll" data-image-src="images/IMG_4132.jpg">
+    <section class="parallax-window" data-parallax="scroll" data-image-src="images/IMG_4132.JPG">
       <h1>PortFolio</h1>
       <p>Kyusyusangyou University　<br> Faculty of Commerce Management, Department of Distribution Corporate Management Course</p>
     </section>
