--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
   <div id="wrapper">
 
+  <!--今回使用した「Parallax.js」ライブラリは、iOS端末及びAndroid端末には対応しておらず、正常にパララックス表示できません。-->
+    
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/IMG_4132.JPG">
       <h1>PortFolio</h1>
       <p>Kyusyusangyou University　<br> Faculty of Commerce Management, Department of Distribution Corporate Management Course</p>
